# netui

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  event.rs  hosts_table.rs  logging.rs  main.rs  scanner.rs  stats_aggregator.rs  tui.rs  ui.rs
